microfrontend-host/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-host
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      run: frontend-host
  template:
    metadata:
      labels:
        run: frontend-host
    spec:
      containers:
        - image: IMG_NAME
          imagePullPolicy: IfNotPresent
          name: frontend
          livenessProbe:
            httpGet:
              path: /
              port: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
          resources:
            requests:
              memory: 32Mi
              cpu: 10m
