microfrontend-host/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-host
  namespace: default
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    run: frontend-host
  type: NodePort
