microfrontend-host/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: host-ingress
  namespace: default
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: frontend-host
              servicePort: 80
